# lambda-stream-rust

./: .gitignore  ApiSpec.yml  Cargo.toml  Makefile  README.md  deploy-api.sh  samconfig.toml  template.yaml  test-api.sh
.cargo/: config.toml
src/: dynamo.rs  lib.rs  main.rs  stream_client.rs  stream_markdown.rs  telegram.rs  test_bedrock.rs
tests/: test_build_body.rs  test_dynamo.rs  test_extract_delta.rs  test_model_validation.rs  test_prompt_request.rs  test_responses.rs  test_stream_markdown.rs  test_telegram.rs
